--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -4,4 +4,8 @@
     <string name="action_settings">Options</string>
     <string name="profile_age">Age :</string>
     <string name="profile_score">Score :</string>
+    <string name="name">Nom</string>
+    <string name="age">Age</string>
+    <string name="validate">Valider</string>
+    <string name="new_profile_error">Une ou plusieurs valeur manquante</string>
 </resources>
