--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,12 @@
     <string name="action_settings">Settings</string>
     <string name="profile_age">Age :</string>
     <string name="profile_score">Score :</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="name">Name</string>
+    <string name="age">Age</string>
+    <string name="validate">Validate</string>
+    <string name="new_profile_error">Value missing</string>
+    <string name="ok" translatable="false">OK</string>
 </resources>
