--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -8,4 +8,10 @@
     <string name="age">Age</string>
     <string name="validate">Valider</string>
     <string name="new_profile_error">Une ou plusieurs valeur manquante</string>
+    <string name="mathematics">Mathématiques</string>
+    <string name="astronomy">Astronimie</string>
+    <string name="biology">Biologie</string>
+    <string name="chemistry">Chimie</string>
+    <string name="informatics">Informatique</string>
+    <string name="physics">Physique</string>
 </resources>
