--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,10 +5,16 @@
     <string name="profile_score">Score :</string>
 
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="name">Name</string>
     <string name="age">Age</string>
     <string name="validate">Validate</string>
     <string name="new_profile_error">Value missing</string>
     <string name="ok" translatable="false">OK</string>
+    <string name="mathematics">Mathematics</string>
+    <string name="informatics">informatics</string>
+    <string name="physics">Physics</string>
+    <string name="chemistry">Chemistry</string>
+    <string name="biology">Biology</string>
+    <string name="astronomy">Astronomy</string>
 </resources>
