--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OOlivia</string>
+    <string name="app_name">Olivia</string>
     <string name="action_settings">Settings</string>
     <string name="profile_age">Age :</string>
     <string name="profile_score">Score :</string>
