--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -14,4 +14,5 @@
     <string name="chemistry">Chimie</string>
     <string name="informatics">Informatique</string>
     <string name="physics">Physique</string>
+    <string name="no_profiles_found">Aucun profile trouvé, Aller en créer un nouveau !</string>
 </resources>
