--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">Olivia</string>
     <string name="action_settings">Settings</string>
-    <string name="profile_age">Age :</string>
-    <string name="profile_score">Score :</string>
+    <string name="profile_age">Age:</string>
+    <string name="profile_score">Score:</string>
 
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="name">Name</string>
@@ -11,13 +11,13 @@
     <string name="new_profile_error">Value missing</string>
     <string name="ok" translatable="false">OK</string>
     <string name="mathematics">Mathematics</string>
-    <string name="informatics">informatics</string>
+    <string name="informatics">Computer science</string>
     <string name="physics">Physics</string>
     <string name="chemistry">Chemistry</string>
     <string name="biology">Biology</string>
     <string name="astronomy">Astronomy</string>
-    <string name="no_profiles_found">No profiles found, go create a new one !</string>
+    <string name="no_profiles_found">No profiles found, create a new one !</string>
     <string name="delete">Delete profile ?</string>
-    <string name="delete_message">Do you want delete the selected profile ?</string>
+    <string name="delete_message">Do you want to delete the selected profile ?</string>
     <string name="cancel">Cancel</string>
 </resources>
