dans la création de nouveau profils changement de l'age en date de naissance (partie graphique OK code behind non fonctionnel pour le moment

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -18,4 +18,5 @@
     <string name="delete_message">Voulez-vous supprimer le profil sélectionné ?</string>
     <string name="delete">Supprimer le profil ?</string>
     <string name="cancel">Annuler</string>
+    <string name="change">Changer</string>
 </resources>
