--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="delete">Delete profile ?</string>
     <string name="delete_message">Do you want to delete the selected profile ?</string>
     <string name="cancel">Cancel</string>
+    <string name="change">Change</string>
 </resources>
