--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,4 +19,8 @@
     <string name="delete">Supprimer le profil ?</string>
     <string name="cancel">Annuler</string>
     <string name="change">Changer</string>
+    <string name="profile_playedGames">Parties :</string>
+    <string name="profile_hiScore">Meilleure partie :</string>
+    <string name="profile_rightAnswers">Réponses justes :</string>
+    <string name="profile_wrongAnswers">Réponses fausses :</string>
 </resources>
