--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,8 @@
     <string name="delete_message">Do you want to delete the selected profile ?</string>
     <string name="cancel">Cancel</string>
     <string name="change">Change</string>
+    <string name="profile_playedGames">Played:</string>
+    <string name="profile_hiScore">Highscore:</string>
+    <string name="profile_rightAnswers">Right answers:</string>
+    <string name="profile_wrongAnswers">Wrong answers:</string>
 </resources>
