Preversion pour la soutanance

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -23,4 +23,5 @@
     <string name="profile_hiScore">Meilleure partie :</string>
     <string name="profile_rightAnswers">Réponses justes :</string>
     <string name="profile_wrongAnswers">Réponses fausses :</string>
+    <string name="stop_game">Arrêter le jeu</string>
 </resources>
