--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="profile_hiScore">Highscore:</string>
     <string name="profile_rightAnswers">Right answers:</string>
     <string name="profile_wrongAnswers">Wrong answers:</string>
+    <string name="stop_game">Stop the game</string>
 </resources>
