--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -33,4 +33,5 @@
     <string name="score_hiScore">Félicitations !</string>
     <string name="change_profile">Modifier le profil</string>
     <string name="delete_profile">Supprimer le profil</string>
+    <string name="years_old"> ans</string>
 </resources>
