--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -30,8 +30,14 @@
     <string name="time">Temps : </string>
     <string name="score_win">Bien joué !</string>
     <string name="score_loose">Essaie encore !</string>
-    <string name="score_hiScore">Félicitations !</string>
     <string name="change_profile">Modifier le profil</string>
     <string name="delete_profile">Supprimer le profil</string>
     <string name="years_old"> ans</string>
+    <string name="achievement_connector">en</string>
+    <string name="score_hi_score">Félicitations !</string>
+    <string name="type_highscore">fois le meilleur score</string>
+    <string name="type_nofault">parties jouées sans fautes</string>
+    <string name="type_percent">% du score</string>
+    <string name="type_played">parties jouées</string>
+    <string name="achievement_prefix">Battre</string>
 </resources>
