correction d'une erreur dans les succès + correction d'une erreur dans les score + remplacement des images des succès dans la bonne taille

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -40,4 +40,6 @@
     <string name="type_percent">% du score</string>
     <string name="type_played">parties jouées</string>
     <string name="achievement_prefix">Battre</string>
+    <string name="achievement_easter_egg">Trouve le secret mystère</string>
+
 </resources>
