--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="type_highscore">time beat the high score</string>
     <string name="achievement_prefix">Beat</string>
     <string name="achievement_easter_egg">Find the mysterious secret</string>
+    <string name="switch_to_story">Switch to story mode</string>
+    <string name="switch_to_quiz">Switch to quiz mode</string>
 </resources>
